--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>My App</title>
+    <title>Even or Odd</title>
 </head>
 
 <body>
     <header>
-        <h1>My App</h1>
+        <h1></h1>
         <img src="assets/big-logo.png" />
     </header>
     
     <main>
-
-        Make a Web App!
+        <button id="button">Hit me!</button>
+        <input id="number-input">
+        <img class="hidden" id="twins" src="https://upload.wikimedia.org/wikipedia/commons/2/2b/Mauch_Twins.jpg" alt="twin brothers">
+        <img class="hidden" id="cyclops" src="https://upload.wikimedia.org/wikipedia/commons/c/cb/Head_of_a_Cyclops_Colosseum.jpg" alt="cyclops">
         
     </main>
 
